added abstract controller for internal endpoints + re-structured logic of gateway master api controller with a util parser and a service